syntax = "proto3";
package wallet.rpc;

option go_package = "wallet/rpc";

message NewAddressRequest {
    string type = 1;
}

message NewAddressReply {
    string address = 1;
}

message WalletBalanceRequest {
	string address = 1;
}

message WalletBalanceReply {
    uint64 balance = 1;
}

service RPC {
    rpc NewAddress(NewAddressRequest) returns (NewAddressReply) {}
    rpc WalletBalance(WalletBalanceRequest) returns (WalletBalanceReply) {}
}
